2004-07-06  Richard Sandiford  <rsandifo@redhat.com>

	PR rtl-optimization/16380
	* loop.c (check_dbra_loop): Sink comparison instructions if they
	do something other than set cc0.

2004-07-06  James E Wilson  <wilson@specifixinc.com>

	* doc/interface.texi (longjmp and automatic variables): Delete
	paragraph recommending taking the address of a variable.

2004-07-06  Nathan Sidwell  <nathan@codesourcery.com>

	* vec.h (VEC_embedded_alloc): Remove.
	(VEC_embedded_size, VEC_embedded_init): New.
	(VEC_alloc, VEC_reserve, VEC_safe_push, VEC_safe_insert): Add
	MEM_STAT_INFO.
	(VEC_truncate): New.
	(vec_p_reserve, vec_o_reserve): Add MEM_STAT_DECL.
	(vec_embedded_alloc): Remove.
	* vec.c (vec_p_reserve, vec_o_reserve): Add MEM_STAT_DECL, adjust.
	(vec_embedded_alloc): Remove.

2004-07-06  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (langhooks.o): Do not depend on gt-langhooks.h.
	(gt-langhooks.h): Remove.

2004-07-06  George Helffrich <george@gly.bris.ac.uk>

	* xcoffout.h (DBX_FINISH_SYMBOL): Fix typo.

2004-07-06  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* config/sparc/sparc.c (get_pc_symbol): Rename into
	add_pc_to_pic_symbol.
	(get_pc_symbol_name): Rename into add_pc_to_pic_symbol_name.
	(load_pic_register): Account for previous changes.
	Use reg_names.  Don't create the label twice.
	* config/sparc/sparc.md (UNSPEC_GET_PC): Rename into
	UNSPEC_LOAD_PCREL_SYM.
	(get_pc): Rename into load_pcrel_sym.  Add predicate to
	operands.  Remove condition.

2004-07-06  Nathan Sidwell  <nathan@codesourcery.com>

	* dbxout.c (dbxout_type): Don't test whether the binfo slot of
	RECORD, UNION & QUAL_UNION is actually a binfo.

	* tree.h (TREE_VIA_VIRTUAL): Rename to ...
	(BINFO_VIRTUAL_P): ... here. Require TREE_BINFO only.
	(BINFO_MARKED, BINFO_FLAG_[16]): New binfo flags.
	* dbxout.c (dbxout_type): Use BINFO_VIRTUAL_P.
	* dwarf2out.c (add_data_member_location_attribute): Likewise.
	(gen_inheritance_die): Likewise.
	* tree-dump.c (deque_and_dump): Likewise.